[package]
name = "blocklist"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", default-features = false }

[build-dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.2"

[build-dependencies.tokio]
version = "1"
default-features = false
features = ["rt-multi-thread", "macros"]

[build-dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["rustls-tls", "gzip", "json"]
