[package]
name = "blocklist"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = """
The project is based on blocklistproject. It provides perfect hash map/set structures for fast lookup of blocklisted items.
"""
documentation = "https://docs.rs/blocklist"
homepage = "https://github.com/pagescrape/blocklist"
license = "MIT"
repository = "https://github.com/pagescrape/blocklist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11.2", default-features = false }

[build-dependencies]
phf = { version = "0.11.2", default-features = false }
phf_codegen = "0.11.2"

[build-dependencies.tokio]
version = "1"
default-features = false
features = ["rt-multi-thread", "macros"]

[build-dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["rustls-tls", "gzip", "json"]
